# machine_learning_hands_on

./: .gitignore  README.md  logistic_regression_exam.ipynb  pyproject.toml  requirements.txt
keiba_machine_learning/: models.py  types.py
keiba_machine_learning/models/: race.py
keiba_machine_learning/models/tests/: test_race.py
keiba_machine_learning/netkeiba/: constants.py  models.py  scrapers.py
keiba_machine_learning/netkeiba/models/: race.py
keiba_machine_learning/netkeiba/models/tests/: test_race.py
keiba_machine_learning/netkeiba/tests/: test_race.py  test_race_information_scraping.py  test_race_result_scraping.py
keiba_machine_learning/netkeiba/tests/fixtures/: 201901010101.html  disability_race_page.html  empty_page.html
scripts/netkeiba/: create_race_result_data_frame.py  download_race_pages.py
