[project]
name = "machine-learning-hands-on"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "k0kishima", email = "56298669+k0kishima@users.noreply.github.com" }
]
dependencies = [
    "anyio>=4.2.0",
    "appnope>=0.1.3",
    "argon2-cffi>=23.1.0",
    "async-generator>=1.10",
    "attrs>=23.1.0",
    "autopep8>=2.0.4",
    "Babel>=2.14.0",
    "backcall>=0.2.0",
    "beautifulsoup4>=4.12.2",
    "bleach>=6.1.0",
    "blessings>=1.7",
    "bpython>=0.24",
    "certifi>=2023.11.17",
    "cffi>=1.16.0",
    "chardet>=5.2.0",
    "curtsies>=0.4.2",
    "cwcwidth>=0.1.9",
    "decorator>=5.1.1",
    "defusedxml>=0.7.1",
    "entrypoints>=0.4",
    "flake8>=6.1.0",
    "greenlet>=3.0.3",
    "idna>=3.6",
    "imbalanced-learn>=0.11.0",
    "imblearn>=0.0",
    "iniconfig>=2.0.0",
    "ipykernel>=6.27.1",
    "ipython>=8.19.0",
    "ipython-genutils>=0.2.0",
    "jedi>=0.19.1",
    "Jinja2>=3.1.2",
    "joblib>=1.3.2",
    "json5>=0.9.14",
    "jsonschema>=4.20.0",
    "jupyter-client>=8.6.0",
    "jupyter-core>=5.5.1",
    "jupyter-packaging>=0.12.3",
    "jupyter-server>=2.12.1",
    "jupyterlab>=4.0.9",
    "jupyterlab-pygments>=0.3.0",
    "jupyterlab-server>=2.25.2",
    "MarkupSafe>=2.1.3",
    "mccabe>=0.7.0",
    "mistune>=3.0.2",
    "mypy>=1.8.0",
    "mypy-extensions>=1.0.0",
    "nbclassic>=1.0.0",
    "nbclient>=0.9.0",
    "nbconvert>=7.13.1",
    "nbformat>=5.9.2",
    "nest-asyncio>=1.5.8",
    "notebook>=7.0.6",
    "numpy>=1.26.2",
    "packaging>=23.2",
    "pandas>=2.1.4",
    "pandocfilters>=1.5.0",
    "parso>=0.8.3",
    "pexpect>=4.9.0",
    "pickleshare>=0.7.5",
    "pluggy>=1.3.0",
    "prometheus-client>=0.19.0",
    "prompt-toolkit>=3.0.43",
    "ptyprocess>=0.7.0",
    "py>=1.11.0",
    "pycodestyle>=2.11.1",
    "pycparser>=2.21",
    "pydantic>=2.5.3",
    "pyflakes>=3.1.0",
    "Pygments>=2.17.2",
    "pyparsing>=3.1.1",
    "pyrsistent>=0.20.0",
    "pytest>=7.4.3",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3.post1",
    "pyxdg>=0.28",
    "pyzmq>=25.1.2",
    "requests>=2.31.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.4",
    "Send2Trash>=1.8.2",
    "six>=1.16.0",
    "sniffio>=1.3.0",
    "soupsieve>=2.5",
    "terminado>=0.18.0",
    "testpath>=0.6.0",
    "threadpoolctl>=3.2.0",
    "toml>=0.10.2",
    "tornado>=6.4",
    "tqdm>=4.66.1",
    "traitlets>=5.14.0",
    "typed-ast>=1.5.5",
    "typing-extensions>=4.9.0",
    "urllib3>=2.1.0",
    "wcwidth>=0.2.12",
    "webencodings>=0.5.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.rye]
managed = true
dev_dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
